nb text as method of Doc

--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
 <body>
 <main>
 <h1>Example notebook</h1>
-<p>using <a href="">mib</a></p>
+<p>using <a href="https://github.com/pietroppeter/mib">mib</a></p>
 
 <pre><code class="python">
 print("hello mib")
