code magic now works!

--- a/example.html
+++ b/example.html
@@ -24,10 +24,20 @@
 <p>using <a href="https://github.com/pietroppeter/mib">mib</a></p>
 
 <pre><code class="python">
-print("hello mib")
+print("hi")
 </code></pre>
 <pre>
-hello mib
+hi
+
+</pre>
+
+
+<pre><code class="python">
+print("hello")
+</code></pre>
+<pre>
+hello
+
 </pre>
 
 </main>
